# proxyboy

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  config.json  example.config.json  example.database.db  example.env
migrations/2025-07-05-193539_create_mocks/: down.sql  up.sql
migrations/2025-07-09-175913_create_logs/: up.sql
src/: import.rs  lib.rs  main.rs  models.rs  schema.rs
store/home/: home.html  home.json
