[package]
name = "proxyboy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"