[package]
name = "proxyboy"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
dotenvy = "0.15.7"
tokio = { version = "1.46.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"